# TestTasks

./: CMakeLists.txt
2gis/: AbstractFileExecutor.cpp  AbstractFileExecutor.h  Application.cpp  Application.h  ChecksumProvider.cpp  ChecksumProvider.h  Helper.cpp  Helper.h  IExecutor.h  SimpleCommandLineParser.cpp  SimpleCommandLineParser.h  WordCounter.cpp  WordCounter.h  main.cpp
Astarta/: Enums.h  File.cpp  File.h  SortedWordList.cpp  SortedWordList.h  SortedWordReader.cpp  SortedWordReader.h  Word.cpp  Word.h  WordNode.h  main.cpp
